# composer

./: .clippy.toml  .editorconfig  .gitignore  README.md  justfile  rustfmt.toml
.github/workflows/: README.md  ci.yml  release.yml
docs/: README.md
python/: .gitignore  README.md  build_docs.py  noxfile.py  pyproject.toml
python/docs/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
python/docs/_static/: custom.css
python/docs/api/: ai.rst  core.rst  serialization.rst
python/examples/: 01_basic_chords.py  02_scale_fingerprints.py  03_ai_suggestions.py  04_serialization.py  05_complete_workflow.py  06_roman_numeral_analysis.py  07_pattern_matching.py  08_advanced_theory.py  09_ml_tokenization.py  10_configuration_constants.py
python/notebooks/: 01_complexity_analysis_models.ipynb  02_chord_progression_suggester.ipynb
python/notebooks/exploration/: 01_complexity_analysis_models.ipynb
python/notebooks/training/: 01_training_data_collection.ipynb  02_pattern_analysis_and_trie_optimization.ipynb  03_magic_chord_algorithm_training.ipynb  04_bass_harmonization_models.ipynb  05_difficulty_assessment_training.ipynb  06_scale_degree_harmonization.ipynb  07_performance_optimization_and_validation.ipynb  08_integration_testing_and_deployment.ipynb
python/src/composer/: __init__.py  composer.pyi
python/tests/: __init__.py  conftest.py  test_ai.py  test_ai_comprehensive.py  test_basic.py  test_chord.py  test_integration.py  test_performance.py  test_scale.py  test_serialization.py
rust/: .gitignore  Cargo.toml
rust/crates/composer-ai/: Cargo.toml
rust/crates/composer-ai/src/: analysis.rs  engine.rs  error.rs  lib.rs  suggestions.rs  trie.rs
rust/crates/composer-ai/tests/: test_bass_harmonization.rs  test_complexity_factors_validation.rs  test_difficulty_assessment.rs  test_magic_chord_algorithm.rs  test_model_validation.rs  test_scale_degree_harmonization.rs
rust/crates/composer-config/: Cargo.toml
rust/crates/composer-config/src/: lib.rs
rust/crates/composer-core/: Cargo.toml
rust/crates/composer-core/src/: chord.rs  constants.rs  error.rs  lib.rs  roman.rs  scale.rs  theory.rs
rust/crates/composer-core/tests/: integration_test.rs
rust/crates/composer-ffi/: Cargo.toml
rust/crates/composer-ffi/src/: ai.rs  chord.rs  error.rs  lib.rs  scale.rs  serialization.rs  theory.rs
rust/crates/composer-serialization/: Cargo.toml
rust/crates/composer-serialization/src/: chord_binary.rs  constants.rs  error.rs  hash.rs  lib.rs  tokenization.rs  trie_binary.rs
rust/crates/composer-wasm/: Cargo.toml  package.json
rust/crates/composer-wasm/src/: lib.rs
wasm/: .gitignore  README.md  biome.json  package-lock.json  package.json  test_typescript.js  tsconfig.json
wasm/examples/: node_example.js  web_example.html
wasm/examples/typescript/: 01_basic_chords.ts  02_scale_fingerprints.ts  03_ai_suggestions.ts  04_serialization.ts  05_complete_workflow.ts  06_roman_numeral_analysis.ts  07_pattern_matching.ts  08_advanced_theory.ts  09_ml_tokenization.ts  10_configuration_constants.ts
