[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "composer"
version = "0.1.1"
description = "High-performance music theory and composition library with AI-powered features"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Composer Contributors"}
]
homepage = "https://github.com/cjgdev/composer"
repository = "https://github.com/cjgdev/composer"
keywords = ["music", "theory", "chord", "ai", "composition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # Add any pure Python dependencies here if needed
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-mock>=3.10",
    "pytest-xdist>=3.0",  # For parallel test execution
    "pytest-timeout>=2.1",  # For test timeouts
]
dev = [
    "ruff",
    "nox",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "linkify-it-py>=2.0.0",  # Required for myst-parser linkify extension
    # "sphinxcontrib-rust>=0.8.0",  # Disabled temporarily due to compatibility issues
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-copybutton>=0.5.2",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0", 
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "scipy>=1.10.0",
    "ipywidgets>=8.0.0",  # For interactive widgets
    "networkx>=3.1",
    "scikit-learn>=1.3.2",
]
all = [
    "composer[test,dev,docs,notebooks]",
]

[tool.maturin]
# This is the key setting for a monorepo. It tells maturin where to find the
# Cargo.toml for the FFI crate we want to build.
manifest-path = "../rust/crates/composer-ffi/Cargo.toml"

# This enables the "src layout" for our Python code.
python-source = "src"

[tool.ruff]
# Set the minimum Python version to target for compatibility checks.
target-version = "py38"
line-length = 88
# Tell ruff where to find the Python source code.
src = ["src", "tests"]

[tool.ruff.lint]
# Select rule sets. 'I' is for isort, 'B' for flake8-bugbear, 'ANN' for flake8-annotations.
select = ["E", "F", "I", "B", "ANN", "UP", "C90"]
# Ignore specific rules if needed.
ignore = ["ANN101", "F403"]  # Ignore missing type hint for `self` in methods, star imports

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=composer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--tb=short",
    "--durations=10",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "ai: marks tests as AI-related tests",
    "serialization: marks tests as serialization-related tests",
    "benchmark: marks tests as benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
# timeout = 300  # 5 minute timeout for individual tests
# timeout_method = "thread"