[package]
name = "composer-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for Composer music theory library"
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
composer-core = { path = "../composer-core" }
composer-serialization = { path = "../composer-serialization" }
composer-ai = { path = "../composer-ai" }
composer-config = { path = "../composer-config" }
wasm-bindgen.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
getrandom.workspace = true

[dependencies.web-sys]
workspace = true
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false